src/text.css
/* ==========================================================================
   Variables
   ========================================================================== */

/* ==========================================================================
   Base
   ========================================================================== */

/* ==========================================================================
   Variations
   ========================================================================== */

/**
 * Editable
 */

.ts-text.is-editable {
    text-decoration-style: dotted;
    text-decoration-line: underline;
    text-decoration-color: var(--gray-400);
    cursor: pointer;
}

/**
 * Secondary
 */

.ts-text.is-secondary {
    color: var(--gray-500);
}

/**
 * Bold
 */

.ts-text.is-bold {
    font-weight: bold !important;
}

/**
 * Italic
 */

.ts-text.is-italic {
    font-style: italic !important;
}

/**
 * Deleted
 */

.ts-text.is-deleted {
    text-decoration: line-through !important;
}

/**
 * Underlined
 */

.ts-text.is-underlined {
    text-decoration: underline !important;
}

/**
 * Link
 */

.ts-text.is-link {
    color: #502dff;
}
.ts-text.is-link:hover {
    color: #6a4cff;
}
.ts-text.is-link:active {
    color: #3a1ec1;
}
.ts-text.is-link:visited {
    color: #502dff;
}

/**
 * Code
 */

.ts-text.is-code {
    border-radius: 0.4rem;
    background: var(--gray-100);
    padding: 0 0.5rem;
    color: var(--gray-700);
}

/**
 * Truncated
 */

.ts-text.is-truncated {
    text-overflow: ellipsis;
    white-space: nowrap;
}

/**
 * Uppercased
 */

.ts-text.is-uppercased {
    text-transform: uppercase;
}

/**
 * Lowercased
 */

.ts-text.is-lowercased {
    text-transform: lowercase;
}

/**
 * Aligns
 */

.ts-text.is-center-aligned {
    text-align: center;
}

.ts-text.is-start-aligned {
    text-align: right;
}

.ts-text.is-end-aligned {
    text-align: left;
}

/**
 * Label
 */

.ts-text.is-label {
    font-weight: 500;
    color: var(--gray-900);
    font-size: var(--relative-small);
}

/**
 * Description
 */

.ts-text.is-description {
    color: var(--gray-500);
    font-size: var(--relative-small);
}

/**
 * Disabled
 */

.ts-text.is-disabled {
    opacity: 0.5;
    pointer-events: none;
}

/**
 * Required
 */

.ts-text.is-required::after {
    content: " *";
    font-weight: bold;
    color: var(--negative-600);
}

/**
 * Sizes
 */

.ts-text.is-mini {
    font-size: var(--relative-mini);
}

.ts-text.is-tiny {
    font-size: var(--relative-tiny);
}
.ts-text.is-small {
    font-size: var(--relative-small);
}
.ts-text.is-medium {
    font-size: var(--relative-medium);
}
.ts-text.is-large {
    font-size: var(--relative-large);
}
.ts-text.is-big {
    font-size: var(--relative-big);
}
.ts-text.is-huge {
    font-size: var(--relative-huge);
}
.ts-text.is-massive {
    font-size: var(--relative-massive);
}

/**
 * Negative
 */

.ts-text.is-negative {
    color: var(--negative-600);
}

.ts-text.is-negative.is-secondary {
    color: var(--negative-500);
}

